--- a/train.ipynb
+++ b/train.ipynb
@@ -294,10 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import detectron2"
+   ]
   },
   {
    "cell_type": "code",
